--- a/socket_sample/index.html
+++ b/socket_sample/index.html
@@ -5,6 +5,8 @@
     <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
     <script src="/socket.io/socket.io.js"></script>
     <script>
+
+    //これはテストです。gingbear
     //reconnect:falseは、切断した時に再接続しないため。
     //これを入れないと、サーバが落ちた時にエラーでる。
     var socket = io.connect('http://'+location.hostname, {
