--- a/pingpong/index.html
+++ b/pingpong/index.html
@@ -2,7 +2,7 @@
   <meta charset="utf-8">
   <head>
     <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
-    <script src="http://d3lp1msu2r81bx.cloudfront.net/kjs/js/lib/kinetic-v4.5.3.min.js"></script>
+1    <script src="http://d3lp1msu2r81bx.cloudfront.net/kjs/js/lib/kinetic-v4.5.3.min.js"></script>
     <script src="/socket.io/socket.io.js"></script>
     <script type="text/javascript" src="main.js"></script>
   </head>
