--- a/pingpong/index.html
+++ b/pingpong/index.html
@@ -5,6 +5,12 @@
     <script type="text/javascript" src="http://d3lp1msu2r81bx.cloudfront.net/kjs/js/lib/kinetic-v4.5.3.min.js"></script>
     <script type="text/javascript" src="/socket.io/socket.io.js"></script>
     <script type="text/javascript" src="main.js"></script>
+    <style>
+    body {
+      margin: 0px;
+      padding: 0px;
+    }
+    </style>
   </head>
   <body>
     <div id="container"></div>
